@@ -3,7 +3,6 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- scroll to: prev/next line with > vis lines subr
 - odd bug: delete so that bracket match appears, also subr 2 to 1
 - print & markTokens()
 - tall caret and tab
